Added templates, new course imgs, hero carousel, home-courses hover

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,3 +17,9 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
+
+@import "pages/homepage";
+@import "pages/us";
+@import "pages/education";
+@import "pages/new";
+@import "pages/exhibitions";
