--- a/assets/styles/pages/_homepage.scss
+++ b/assets/styles/pages/_homepage.scss
@@ -182,3 +182,60 @@ figure.effect-milo:hover p {
 	}
 }
 */
+
+
+/* *** Courses section *** */
+
+#container-courses {
+  padding: 50px 0;
+  background-color: #ebebeb;
+
+  #btn-courses {
+    margin-top: 30px;
+    background-color: #b5b3a6;
+    color: #fff;
+  }
+}
+
+
+/* *** Lo +Nuevo Section *** */
+
+#container-new {
+  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,1)), url(../images/bg-new.jpg) no-repeat 100%;
+  height: 350px;
+  padding: 30px 0;
+
+  h1 {
+    color: #fff;
+  }
+
+  p {
+    margin: 35px 0 60px;
+    color: #fff;
+  }
+}
+
+/* *** Nosotros Section *** */
+
+#container-us {
+  #row-us {
+    background: url("../images/bg-us.jpg");
+    height: 670px;
+
+    #div-us-text {
+      padding: 80px 15% 0 0;
+      text-align: center;
+
+      h1 {
+        text-transform: uppercase;
+        margin-bottom: 40px;
+        color: #dc3545;
+      }
+
+      p {
+        text-align: left;
+        margin-bottom: 30px;
+      }
+    }
+  }
+}
