--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,5 +1,24 @@
 footer {
-  padding: 30px 0;
+  padding: 50px 0;
   background-color: dimgray;
+  color: white;
 
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+
+    li {
+      display: inline-block;
+      margin-right: 40px;
+    }
+  }
+
+  #logo-white {
+    margin-bottom: 25px;
+  }
+
+  #div-map {
+    padding: 5px;
+    border: solid 1px lightgray;
+  }
 }
