--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -3,9 +3,17 @@ footer {
   background-color: dimgray;
   color: white;
 
+  h3 {
+    text-transform: uppercase;
+    font-size: 24px;
+    letter-spacing: 3px;
+    margin-bottom: 15px;
+  }
+
   ul {
     list-style-type: none;
     padding-left: 0;
+    margin-top: 30px;
 
     li {
       display: inline-block;
