modified services and exhibitions

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,1 +1,8 @@
+h1, h2, h3, h4 {
+  //font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+}
 
+body {
+  font-family: 'Lato', sans-serif;
+}
