--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -6,3 +6,8 @@ h1, h2, h3, h4 {
 body {
   font-family: 'Lato', sans-serif;
 }
+
+//to level content due to fixed menu
+div.wrap {
+  margin-top: 150px;
+}
