--- a/assets/styles/pages/_us.scss
+++ b/assets/styles/pages/_us.scss
@@ -3,7 +3,6 @@
     padding: 0;
 
     .hero {
-
       .owl-item {
         width: 100%;
         height: 400px;
@@ -18,5 +17,41 @@
         }
       }
     }
+  }
+}
+
+#container-nuestro-centro {
+  padding: 50px 0;
+
+  .div-text {
+    padding-right: 10%;
+
+    h1 {
+      margin-bottom: 30px;
+      color: #00bfff;
+     }
+  }
+
+  .div-img {
+    padding-top: 100px;
+
+    img {
+      border-radius: 20px;
+    }
+  }
+}
+
+#container-colaboradores-nacionales, #container-colaboradores-internacionales {
+  margin-bottom: 50px;
+
+  h1 {
+    margin-bottom: 30px;
+    color: #9e9e9e;
+  }
+
+  h4 {
+    text-transform: capitalize;;
+    margin-top: 10px;
+    font-weight: bold;
   }
 }
