Add changes to education - modal

--- a/assets/styles/pages/_education.scss
+++ b/assets/styles/pages/_education.scss
@@ -1,7 +1,38 @@
 #container-page-education {
-  padding: 50px 0;
+  padding: 30px 0;
 
   #filters {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+
+    button.is-checked {
+      background-color: #a3a3a3;
+      //border-color: #a3a3a3;
+      border: none;
+    }
+  }
+
+  .element-item {
+    margin-bottom: 30px;
+    position: relative;
+
+    img {
+      border-radius: 20px;
+    }
+
+    h2 {
+      position: absolute;
+      top: 30px;
+      left: 60px;
+      text-transform: capitalize;
+      color: #fff;
+      width: 50%;
+    }
+
+    button.btn-course {
+      position: absolute;
+      bottom: 33px;
+      right: 45px;
+      padding: 5px 20px;
+    }
   }
 }
