--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,5 +1,15 @@
 nav.navbar {
   background-color: white;
+  
+  .container {
+    position: relative;
+
+    #navbar-fixed-top {
+      position: absolute;
+      top: -10px;
+      right: 15%;
+    }
+  }
 
   a.navbar-brand {
     img {
