--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -6,9 +6,29 @@ nav.navbar {
 
     #navbar-fixed-top {
       position: absolute;
-      top: -10px;
-      right: 15%;
+      top: -18px;
+      right: 2%;
+
+      li {
+        margin-left: 20px;
+        padding: 0;
+        border-radius: 10px;
+        background-color: #34c6dd;
+
+        a {
+          color: white;
+        }
+
+        img {
+          height: 20px;
+          margin-top: 15px;
+        }
+      }
     }
+  }
+
+  #navbarSupportedContent {
+    margin-top: 28px;
   }
 
   a.navbar-brand {
