Changes in school

--- a/assets/styles/pages/_exhibitions.scss
+++ b/assets/styles/pages/_exhibitions.scss
@@ -13,6 +13,7 @@ section#container-exhibitions {
       left: 15%;
       color: #fff;
       text-transform: capitalize;
+      text-shadow: 3px 3px 5px rgba(34, 34, 34, 0.82);
     }
   }
 }
