--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -11,14 +11,18 @@ nav.navbar {
       right: 2%;
 
       li {
-        margin-left: 20px;
+        margin-left: 8px;
         padding: 0;
+
         border-radius: 10px;
         //background-color: #34c6dd;
-        background-color: #2e2e2e;
+        //background-color: #2e2e2e;
 
         a {
-          color: white;
+          margin-top: 7px;
+          padding-left: 0;
+          color: gray;
+          font-size: 13px;
         }
 
         img {
