Started responsiveness homepage and menu

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -10,4 +10,8 @@ body {
 //to level content due to fixed menu
 div.wrap {
   margin-top: 150px;
+
+  @media screen and (max-width: 991px) {
+    margin-top: 90px;
+  }
 }
