--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -42,6 +42,10 @@ nav.navbar {
       width: 160px;
       transition: all 0.5s ease;
 
+      @media screen and (max-width: 991px) {
+        width: 80px;
+      }
+
       &.shrink {
         width: 80px;
       }
