--- a/assets/styles/pages/_homepage.scss
+++ b/assets/styles/pages/_homepage.scss
@@ -8,15 +8,25 @@
 
       .owl-item {
         width: 100%;
-        height: 400px;
+        //height: 400px;
+        height: 50vh;
+
+        @media screen and (max-width: 767px) {
+          height: 25vh;
+        }
 
         img {
           width: 100%;
-          height: 400px;
+          //height: 400px;
+          height: 50vh;
           position: absolute;
           top: 0;
           left: 0;
           z-index: -1;
+
+          @media screen and (max-width: 767px) {
+            height: 25vh;
+          }
         }
       }
     }
@@ -187,6 +197,10 @@ figure.effect-milo:hover p {
   padding: 50px 0;
   background-color: #ebebeb;
 
+  @media screen and (max-width: 575px) {
+    padding: 10px 0 25px;
+  }
+
   #btn-courses {
     margin-top: 30px;
     background-color: #b5b3a6;
@@ -201,6 +215,10 @@ section#carousels {
   .div-carousel {
     padding: 50px;
     color: #696969;
+
+    @media screen and (max-width: 575px) {
+      padding: 25px;
+    }
 
     h1 {
       margin-bottom: 20px;
@@ -272,6 +290,10 @@ section#carousels {
 
   #row-us {
     height: 670px;
+
+    @media screen and (max-width: 1199px) {
+      height: auto;
+    }
 
     #div-us-text {
       padding: 50px 0;
