--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -2,6 +2,11 @@ h1, h2, h3, h4 {
   //font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
 }
+h1 {
+  @media screen and (max-width: 575px){
+    font-size: 2rem;
+  }
+}
 
 body {
   font-family: 'Lato', sans-serif;
