--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -3,4 +3,9 @@ a.btn {
   text-transform: uppercase;
   font-weight: bold;
   border-radius: 0;
+
+  @media screen and (max-width: 575px){
+    padding: .4rem 2rem;
+    font-size: 1.2rem;
+  }
 }
