first finish responsiveness homepage

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -8,6 +8,12 @@ h1 {
   }
 }
 
+h4 {
+  @media screen and (max-width: 575px){
+    font-size: 1.2rem;
+  }
+}
+
 body {
   font-family: 'Lato', sans-serif;
 }
