--- a/assets/styles/pages/_homepage.scss
+++ b/assets/styles/pages/_homepage.scss
@@ -194,6 +194,10 @@ figure.effect-milo {
       margin-top: 30px;
       background-color: #b5b3a6;
       color: #fff;
+
+      @media screen and (max-width: 575px) {
+        margin-top: 10px;
+      }
     }
   }
 
@@ -262,6 +266,10 @@ figure.effect-milo {
     height: 350px;
     padding: 30px 0;
 
+    @media screen and (max-width: 575px){
+      height: auto;
+    }
+
     h1 {
       color: #fff;
     }
@@ -292,7 +300,7 @@ figure.effect-milo {
         text-align: center;
 
         @media screen and (max-width: 575px) {
-          padding: 50px 20px;
+          padding: 30px 20px;
         }
 
         h1 {
