--- a/assets/styles/pages/_us.scss
+++ b/assets/styles/pages/_us.scss
@@ -5,15 +5,23 @@
     .hero {
       .owl-item {
         width: 100%;
-        height: 400px;
+        height: 50vh;
+
+        @media screen and (max-width: 767px) {
+          height: 25vh;
+        }
 
         img {
           width: 100%;
-          height: 400px;
+          height: 50vh;
           position: absolute;
           top: 0;
           left: 0;
           z-index: -1;
+
+          @media screen and (max-width: 767px) {
+            height: 25vh;
+          }
         }
       }
     }
@@ -36,6 +44,10 @@
   .div-img {
     padding-top: 100px;
 
+    @media screen and (max-width: 767px){
+      padding-top: 20px;
+    }
+
     img {
       border-radius: 20px;
     }
@@ -44,6 +56,13 @@
 
 #container-colaboradores-nacionales, #container-colaboradores-internacionales {
   margin-bottom: 50px;
+
+  .owl-item {
+    @media screen and (max-width: 424px){
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  }
 
   h1 {
     margin-bottom: 30px;
