--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -3,6 +3,10 @@ footer {
   background-color: #2e2e2e;
   color: white;
 
+  @media screen and (max-width: 991px) {
+    padding: 20px 0;
+  }
+
   form {
     input {
       background-color: #3b3b3b;
