--- a/assets/styles/pages/_exhibitions.scss
+++ b/assets/styles/pages/_exhibitions.scss
@@ -6,11 +6,12 @@ section#container-exhibitions {
 
   .exhibition {
     position: relative;
+    padding: 0;
 
     h2 {
       position: absolute;
-      top: 9%;
-      left: 15%;
+      bottom: 9%;
+      left: 10%;
       color: #fff;
       text-transform: capitalize;
       text-shadow: 3px 3px 5px rgba(34, 34, 34, 0.82);
