--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
+@import "layouts/wocommerce";
 
 @import "pages/homepage";
 @import "pages/us";
