--- a/assets/styles/pages/_homepage.scss
+++ b/assets/styles/pages/_homepage.scss
@@ -43,7 +43,7 @@
     margin-top: 15px;
     margin-bottom: 15px;
     background: #3085a3;
-    cursor: pointer;
+    //cursor: pointer;
 
     img {
       position: relative;
@@ -142,7 +142,7 @@ figure.effect-milo {
   h2 {
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: 15px;
     padding: 1em 1.2em;
   }
 
