added cine template and style

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "layouts/wocommerce";
 
 @import "pages/homepage";
+@import "pages/cine";
 @import "pages/us";
 @import "pages/education";
 @import "pages/new";
