changes to h colors in cine

--- a/assets/styles/pages/_cine.scss
+++ b/assets/styles/pages/_cine.scss
@@ -13,13 +13,16 @@ div#video {
 section#cine {
   padding-top: 80px;
   padding-bottom: 50px;
+  text-align: justify;
 
   h1 {
     margin-bottom: 30px;
+    color: #152269;
   }
 
   h3 {
     margin-top: 40px;
     margin-bottom: 25px;
+    color: #00bfff;
   }
 }
