--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  padding: 50px 0;
+  padding: 50px 0 10px;
   background-color: #2e2e2e;
   color: white;
 
@@ -42,5 +42,10 @@ footer {
   #div-map {
     padding: 5px;
     border: solid 1px lightgray;
+  }
+
+  span, a {
+    font-size: 12px;
+    color: white;
   }
 }
