--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -8,6 +8,13 @@ h1 {
   }
 }
 
+h3 {
+  @media screen and (max-width: 575px){
+    font-size: 1.2rem;
+    line-height: 1.3;
+  }
+}
+
 h4 {
   @media screen and (max-width: 575px){
     font-size: 1.2rem;
