--- a/assets/styles/pages/_us.scss
+++ b/assets/styles/pages/_us.scss
@@ -8,7 +8,7 @@
         height: 50vh;
 
         @media screen and (max-width: 767px) {
-          height: 25vh;
+          height: 14vh;
         }
 
         img {
@@ -20,7 +20,7 @@
           z-index: -1;
 
           @media screen and (max-width: 767px) {
-            height: 25vh;
+            height: auto;
           }
         }
       }
@@ -29,7 +29,6 @@
 }
 
 #container-nuestro-centro {
-  //padding: 50px 0;
   padding: 80px 0;
 
   .div-text {
