changes to style

--- a/assets/styles/pages/_new.scss
+++ b/assets/styles/pages/_new.scss
@@ -2,6 +2,10 @@ section#new {
 //  padding-top: 30px;
 //  padding-bottom: 30px;
   background-color: #d3d3d3;
+
+  .card-body {
+    text-align: justify;
+  }
 //
 //  .div-nuevo {
 //    margin: 15px 0;
