--- a/assets/styles/pages/_cine.scss
+++ b/assets/styles/pages/_cine.scss
@@ -29,8 +29,9 @@ section#cine {
     color: #152269;
 
     @media screen and (max-width: 767px){
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       text-align: left;
+      font-size: 1.4rem;
     }
   }
 
