--- a/assets/styles/pages/_homepage.scss
+++ b/assets/styles/pages/_homepage.scss
@@ -255,6 +255,10 @@ figure.effect-milo {
     p {
       margin: 35px 0 60px;
       color: #fff;
+
+      @media screen and (max-width: 767px) {
+        text-align: justify;
+      }
     }
   }
 
