--- a/assets/styles/pages/_us.scss
+++ b/assets/styles/pages/_us.scss
@@ -31,13 +31,25 @@
 #container-nuestro-centro {
   padding: 80px 0;
 
+  @media screen and (max-width: 575px) {
+    padding: 30px 0 40px;
+  }
+
   .div-text {
     padding-right: 10%;
     text-align: justify;
 
+    @media screen and (max-width: 767px) {
+      padding-right: 15px;
+    }
+
     h1 {
       margin-bottom: 30px;
       color: #00bfff;
+
+      @media screen and (max-width: 575px) {
+        margin-bottom: 15px;
+      }
      }
   }
 
@@ -56,6 +68,11 @@
 
 #container-colaboradores-nacionales, #container-colaboradores-internacionales {
   margin-bottom: 50px;
+
+  @media screen and (max-width: 575px) {
+    //padding: 0;
+    margin-bottom: 30px;
+  }
 
   .owl-item {
     @media screen and (max-width: 424px){
